# slurm-exporter

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: prometheus-scrape.yml  slurm-exporter.service
docs/: container.md  installation.md  metrics.md
slurm_exporter/: __main__.py  base.py  config.py  server.py  utils.py
slurm_exporter/collectors/: diagnostics.py  jobs.py  limits.py  nodes.py
tests/: test_diagnostics.py  test_jobs.py  test_limits.py  test_nodes.py  test_utils.py
tests/fixtures/: sacctmgr.txt  sdiag.json  sdiag_slurm24.json  sinfo.txt  sinfo_gres.txt  squeue.txt
