[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-exporter"
version = "0.1.0"
description = "Prometheus exporter for SLURM workload manager"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["prometheus_client>=0.17.0"]

[project.scripts]
slurm-exporter = "slurm_exporter.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["slurm_exporter*"]
